examples/networking/network-policy-example.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-example-app
  namespace: example-app

spec:
  podSelector:
    matchLabels:
      app: example-app

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              access: allowed

      ports:
        - protocol: TCP
          port: 80
